<?xml version="1.0"?>
<package format="2">
  <name>ltu_actor_rpi_estop_loop</name>
  <version>0.0.1</version>
  <description>
    A node to send std_srvs/Empty service requests when a broken estop loop is detected from an arduino
  </description>
  <maintainer email="mpleune@ltu.edu">Mitchell Pleune</maintainer>
  <license>UNLICENSED</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>python3-gpiozero</depend>
</package>
